syntax = "proto3";
option go_package = '../proto';

service RecruitCounter{
  rpc CountPost() returns();
  rpc CountUserPost() returns();
}